--- a/main.ipynb
+++ b/main.ipynb
@@ -2239,27 +2239,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Email\n",
-      "hotmail.com     1638\n",
-      "yahoo.com       1616\n",
-      "gmail.com       1605\n",
-      "smith.com         42\n",
-      "williams.com      37\n",
-      "Name: count, dtype: int64\n"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Top 5 Most Popular Email providers (e.g. gmail, yahoo etc)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdata\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmail\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x:x\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m@\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39mvalue_counts()\u001b[38;5;241m.\u001b[39mhead())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
      ]
     }
    ],
    "source": [
     "# Top 5 Most Popular Email providers (e.g. gmail, yahoo etc)\n",
-    "print(data['Email'].apply(lambda x:x.split('@')[1]).value_counts().head())"
+    "print(data['Email'].apply(lambda x:x.split('@')[1]).value_counts().head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
